# vala-hello

./: README.md  meson.build
data/: meson.build  vala-hello.desktop
debian/: control  copyright  rules
src/: Main.vala
